# qc-traits

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: python.yml  rust.yml
src/: angle.rs  cfg.rs  errors.rs  field.rs  lib.rs  merge.rs  ops.rs  products.rs  python.rs  repair.rs  rework.rs  scaling.rs  scope.rs  split.rs  subset.rs
src/filter/: decim.rs  mask.rs  mod.rs
src/filter/mask/: filter.rs  mod.rs  operand.rs
src/pipeline/: mod.rs  parser.rs
src/pipeline/pipeline/: mod.rs  ops.rs  select.rs
src/pipeline/pipeline/select/: mod.rs
src/pipeline/pipeline/select/step/: item.rs  mod.rs  operand.rs
src/processing/: item.rs  mask.rs  mod.rs  sampling.rs  time.rs
src/processing/filter/: decim.rs  mod.rs
src/processing/time/: absolute.rs  correction.rs  database.rs  mod.rs  polynomial.rs
tests/: test_python.py
