[package]
name = "gnss-qc-traits"
version = "0.4.0"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "GNSS Quality Control traits"
homepage = "https://github.com/nav-solutions"
repository = "https://github.com/nav-solutions/qc-traits"
keywords = ["gnss", "gps", "geodesy", "geo"]
categories = ["science", "science::geo"]
edition = "2021"

[package.metadata]
msrv = "1.82"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[features]
default = ["html"]

# Unlock processing features
# - Filter designer: design and apply filter ops to GNSS datasets
processing = [
    "dep:gnss-rs",
    "dep:hifitime",
]

# Python bindings
python = [
    "dep:pyo3",
    "gnss-rs?/python",
    "hifitime?/python",
]

# Unlock HTML reporting
# This is enabled by default, since HTML is our only reporting format to this day.
html = [
    "dep:maud",
]

# feature used to test the library
all-but-python = ["html", "processing"]

[dependencies.gnss-rs]
git = "https://github.com/nav-solutions/gnss"
rev = "af691cfe4c22b4b9c952a899f6df3c77453c9c34"
optional = true
features = ["std", "domes", "cospar", "sbas"]

[dependencies]
thiserror = "2"
maud = { version = "0.26", optional = true }
hifitime = { version = "4", optional = true }
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
